* FileManager: added 'Proprietary Words' functionality
* FileManager: added 'parser phase 2' magic words functionality
* FileSystemSyntaxColoring: added '<!--@@ wikitext @@-->' pattern to hide wikitext
* PageFunctions: added '#noext' magic word
* Added [[Extension:AutoRedirect]] extension
* Added [[Extension:DirectoryManager]] extension
* Simplified installation procedure for all 'stubbed' extensions
* Fix 'FileManager': didn't show up log records correctly
* FileManager: removed dependency on ExtensionClass + made stub
* InterWikiLinkManager: added cancellation of hook-chain on EditFormPreloadText
* Massive update of almost all extension headers - normalization
* StubManager: support for 'exclude' namespace triggering
* CapitalLinks are 'false' by default (helps with FileManager & DirectoryManager extensions)
* Added [[Extension:SecurePHP]] extension
* Added [[Extension:GoogleCode]] extension
* Major simplification of 'FileSystemSyntaxColoring' extension
* 'Wikified' the changelog file

== REL1_10_12: (released ...) ==
* Fixed [[Extension:StubManager]] for bug with 'exclude' namespaces
* Added [[Extension:NamespaceManager]] extension
* Added [[Extension:PageServer]] extension
* Added [[Extension:ExtensionManager]] extension
* Added [[Extension:RepositoryManager]] extension
* Fixed '*' rights for skin related CSS files: 'Common.css' & 'Monobook.css'  (Thanks Uri)
* Enhancements to [[Extension:ForeachFunction]]
* Enhancements to [[Extension:SecureProperties]]
* Added additional check in SpecialPageManager to bullet proof against more PHP versions
* BizzWikiSettings.php: some cleanup and normalization
* Added '#foreachc' parser function to [[Extension:ForeachFunction]]
* Removed 'EditPage.php' from 'includes': no modification was present anyways
* Added 'defines' in each patched file from the stock MediaWiki 'includes' directory (see next bullet)
* Enhanced the installation procedure with one simple check: 
** See if the patched file 'Article.php' is available
 