@@ -258,4 +258,5 @@ $Id$
 * Added 'defines' in each patched file from the stock MediaWiki 'includes' directory (see next bullet)
 * Enhanced the installation procedure with one simple check: 
 ** See if the patched file 'Article.php' is available
- 
+* Simple re-factoring of 'ParserPhase2' extension
+* 
